Updated response of count endpoint and added properties count map
